<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvauswahlgeschaeft2"
        android:layout_width="368dp"
        android:layout_height="34dp"
        android:layout_marginTop="84dp"
        android:layout_marginRight="25dp"
        android:text="@string/auswahlgeschaeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvgeschaefttext2" />

    <TextView
        android:id="@+id/tvgeschaefttext2"
        android:layout_width="226dp"
        android:layout_height="66dp"
        android:layout_marginTop="25dp"
        android:text="@string/IhrGeschaefte"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="233dp"
        android:layout_height="543dp"
        android:layout_marginTop="156dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvdetailgeschaeftaldi2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="35dp"
            android:text="@string/detailGeschaeftAldi2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnauswaehlen1"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/auswaehlen"
            android:textColor="#000000"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tvdetailgeschaeftealdi3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="35dp"
            android:text="@string/detailGeschaeftAldi3"
            android:textAlignment="center"
            android:textColor="#000000"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnauswaehlen2"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/auswaehlen"
            android:textColor="#000000"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tvdetailgeschaeftelidl"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="35dp"
            android:text="@string/detailGeschaeftAldi1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnauswaehlen3"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/auswaehlen"
            android:textColor="#000000"
            android:textSize="10sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>